<resources>
    <string name="app_name">Cost Management</string>

    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_pass">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_register">Đăng ký</string>
    <string name="tab_note">Ghi chú</string>
    <string name="tab_account">Tài khoản</string>
    <string name="tab_report">Báo cáo</string>
    <string name="tab_utility">Tiện ích</string>

    <string name="expenditure_items">Mục chi</string>
    <string name="description">Diễn giải</string>
    <string name="from_account">Từ tài khoản</string>
    <string name="date">Ngày</string>
    <string name="write">Ghi</string>
    <string name="save">Lưu</string>
    <string name="name">Tên</string>
    <string name="start_money">Số tiền ban đầu</string>
    <string name="name_account">Tên tài khoản</string>
    <string name="money_account">Nhập số tiền</string>

    <string-array name="type">
        <item>Chi tiền</item>
        <item>Thu tiền</item>
    </string-array>
</resources>
