<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_blue"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp">

            <LinearLayout
                android:id="@+id/liner_username_blue"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <EditText
                    android:id="@+id/username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:hint="@string/prompt_username" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_pass_blue"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    android:hint="@string/prompt_pass"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_radius_bottom"
                android:text="@string/action_register"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
