<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.princetoad.costmanagement.ViewImpl.MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_above="@+id/bottom_navigation">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="#eeee"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tab_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_note_blue"/>
            <TextView
                android:id="@+id/txt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/tab_note"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_gray"/>
            <TextView
                android:id="@+id/txt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorGray"
                android:text="@string/tab_account"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_report_gray"/>
            <TextView
                android:id="@+id/txt_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorGray"
                android:text="@string/tab_report"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_utility"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/icon_utility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_utility_gray"/>
            <TextView
                android:id="@+id/txt_utility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorGray"
                android:text="@string/tab_utility"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
