<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tab_note"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_radius_gray"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/txt_dong"
                android:layout_toStartOf="@+id/txt_dong"
                android:text="Số tiền"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_dong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="đ"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/tab_note_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_radius_gray"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_title1"
                    style="@style/style_tab_note_text"
                    android:text="@string/expenditure_items" />

                <ImageView
                    android:id="@+id/img1"
                    style="@style/style_tab_note_img"
                    android:src="@drawable/ic_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_gray"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_title2"
                    style="@style/style_tab_note_text"
                    android:text="@string/description" />

                <ImageView
                    android:id="@+id/img2"
                    style="@style/style_tab_note_img"
                    android:src="@drawable/ic_right" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/tab_note_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_radius_gray"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_title3"
                    style="@style/style_tab_note_text"
                    android:text="@string/from_account" />

                <TextView
                    android:id="@+id/txt_from_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ví"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@+id/img3"
                    android:layout_toStartOf="@+id/img3" />

                <ImageView
                    android:id="@+id/img3"
                    style="@style/style_tab_note_img"
                    android:src="@drawable/ic_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_note_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_radius_gray"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_title4"
                    style="@style/style_tab_note_text"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/txt_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="08:52"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@+id/txt_date"
                    android:layout_toStartOf="@+id/txt_date" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hôm nay"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@+id/img4"
                    android:layout_toStartOf="@+id/img4" />

                <ImageView
                    android:id="@+id/img4"
                    style="@style/style_tab_note_img"
                    android:src="@drawable/ic_right" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_tab_note"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_radius_bottom"
            android:text="@string/write"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>